REM32 - refactor: improve readability